# axor-telemetry

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
axor_telemetry/: __init__.py  __main__.py  cli.py  config.py  embedder.py  pipeline.py  serialize.py
axor_telemetry/sinks/: __init__.py  file_sink.py  http_sink.py
tests/: conftest.py  test_cli.py  test_config.py  test_embedder.py  test_file_sink.py  test_http_sink.py  test_main_module.py  test_pipeline.py  test_serialize.py
