[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axor-telemetry"
version = "0.2.0"
description = "Anonymous telemetry pipeline for axor-core: MinHash embedder, local/HTTP sinks, opt-in consent CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["axor", "telemetry", "agents", "minhash"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
# No hard dep on axor-core: sinks/embedder are usable standalone.
# Pipeline imports guard axor-core at runtime.
dependencies = []

[project.optional-dependencies]
core = ["axor-core>=0.3.0,<0.5"]
dev  = ["pytest>=8.0", "pytest-asyncio>=0.23", "axor-core>=0.3.0,<0.5"]

[project.urls]
Repository  = "https://github.com/Bucha11/axor-telemetry"
"Bug Tracker" = "https://github.com/Bucha11/axor-telemetry/issues"
Changelog   = "https://github.com/Bucha11/axor-telemetry/releases"

[tool.hatch.build.targets.wheel]
packages = ["axor_telemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
